fixed spacing error

--- a/newStyle.css
+++ b/newStyle.css
@@ -51,7 +51,7 @@
 
 .slide {
     width: 66%; 
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     justify-content: center;
     align-items: center;
